lib/gen/flmln_bindings.dart

// ignore_for_file: camel_case_types, non_constant_identifier_names, unused_element, unused_field, return_of_invalid_type, void_checks, annotate_overrides, no_leading_underscores_for_local_identifiers, library_private_types_in_public_api

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

class FlMlnBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FlMlnBindings(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FlMlnBindings.fromLookup(ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup)
    : _lookup = lookup;

  int test_flmln() {
    return _test_flmln();
  }

  late final _test_flmlnPtr = _lookup<ffi.NativeFunction<ffi.Int Function()>>('test_flmln');
  late final _test_flmln = _test_flmlnPtr.asFunction<int Function()>();

  void flmln_initialize() {
    return _flmln_initialize();
  }

  late final _flmln_initializePtr = _lookup<ffi.NativeFunction<ffi.Void Function()>>('flmln_initialize');
  late final _flmln_initialize = _flmln_initializePtr.asFunction<void Function()>();

  mbgl_map_options_t mbgl_map_options_create() {
    return _mbgl_map_options_create();
  }

  late final _mbgl_map_options_createPtr = _lookup<ffi.NativeFunction<mbgl_map_options_t Function()>>(
    'mbgl_map_options_create',
  );
  late final _mbgl_map_options_create = _mbgl_map_options_createPtr.asFunction<mbgl_map_options_t Function()>();

  void mbgl_map_options_destroy(
    mbgl_map_options_t _mapOptions,
  ) {
    return _mbgl_map_options_destroy(
      _mapOptions,
    );
  }

  late final _mbgl_map_options_destroyPtr = _lookup<ffi.NativeFunction<ffi.Void Function(mbgl_map_options_t)>>(
    'mbgl_map_options_destroy',
  );
  late final _mbgl_map_options_destroy = _mbgl_map_options_destroyPtr.asFunction<void Function(mbgl_map_options_t)>();

  void mbgl_map_options_set_mode(
    mbgl_map_options_t _mapOptions,
    MbglMapMode mode,
  ) {
    return _mbgl_map_options_set_mode(
      _mapOptions,
      mode.value,
    );
  }

  late final _mbgl_map_options_set_modePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(mbgl_map_options_t, ffi.UnsignedInt)>>('mbgl_map_options_set_mode');
  late final _mbgl_map_options_set_mode = _mbgl_map_options_set_modePtr
      .asFunction<void Function(mbgl_map_options_t, int)>();

  void mbgl_map_options_set_size(
    mbgl_map_options_t _mapOptions,
    int width,
    int height,
  ) {
    return _mbgl_map_options_set_size(
      _mapOptions,
      width,
      height,
    );
  }

  late final _mbgl_map_options_set_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(mbgl_map_options_t, ffi.Uint32, ffi.Uint32)>>(
        'mbgl_map_options_set_size',
      );
  late final _mbgl_map_options_set_size = _mbgl_map_options_set_sizePtr
      .asFunction<void Function(mbgl_map_options_t, int, int)>();

  void mbgl_map_options_set_pixel_ratio(
    mbgl_map_options_t _mapOptions,
    double pixelRatio,
  ) {
    return _mbgl_map_options_set_pixel_ratio(
      _mapOptions,
      pixelRatio,
    );
  }

  late final _mbgl_map_options_set_pixel_ratioPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(mbgl_map_options_t, ffi.Float)>>('mbgl_map_options_set_pixel_ratio');
  late final _mbgl_map_options_set_pixel_ratio = _mbgl_map_options_set_pixel_ratioPtr
      .asFunction<void Function(mbgl_map_options_t, double)>();

  mbgl_tile_server_options_t mbgl_tile_server_options_create() {
    return _mbgl_tile_server_options_create();
  }

  late final _mbgl_tile_server_options_createPtr = _lookup<ffi.NativeFunction<mbgl_tile_server_options_t Function()>>(
    'mbgl_tile_server_options_create',
  );
  late final _mbgl_tile_server_options_create = _mbgl_tile_server_options_createPtr
      .asFunction<mbgl_tile_server_options_t Function()>();

  mbgl_tile_server_options_t mbgl_tile_server_options_mapbox_configuration_create() {
    return _mbgl_tile_server_options_mapbox_configuration_create();
  }

  late final _mbgl_tile_server_options_mapbox_configuration_createPtr =
      _lookup<ffi.NativeFunction<mbgl_tile_server_options_t Function()>>(
        'mbgl_tile_server_options_mapbox_configuration_create',
      );
  late final _mbgl_tile_server_options_mapbox_configuration_create =
      _mbgl_tile_server_options_mapbox_configuration_createPtr.asFunction<mbgl_tile_server_options_t Function()>();

  mbgl_tile_server_options_t mbgl_tile_server_options_maptiler_configuration_create() {
    return _mbgl_tile_server_options_maptiler_configuration_create();
  }

  late final _mbgl_tile_server_options_maptiler_configuration_createPtr =
      _lookup<ffi.NativeFunction<mbgl_tile_server_options_t Function()>>(
        'mbgl_tile_server_options_maptiler_configuration_create',
      );
  late final _mbgl_tile_server_options_maptiler_configuration_create =
      _mbgl_tile_server_options_maptiler_configuration_createPtr.asFunction<mbgl_tile_server_options_t Function()>();

  mbgl_tile_server_options_t mbgl_tile_server_options_maplibre_configuration_create() {
    return _mbgl_tile_server_options_maplibre_configuration_create();
  }

  late final _mbgl_tile_server_options_maplibre_configuration_createPtr =
      _lookup<ffi.NativeFunction<mbgl_tile_server_options_t Function()>>(
        'mbgl_tile_server_options_maplibre_configuration_create',
      );
  late final _mbgl_tile_server_options_maplibre_configuration_create =
      _mbgl_tile_server_options_maplibre_configuration_createPtr.asFunction<mbgl_tile_server_options_t Function()>();

  void mbgl_tile_server_options_destroy(
    mbgl_tile_server_options_t _tileServerOptions,
  ) {
    return _mbgl_tile_server_options_destroy(
      _tileServerOptions,
    );
  }

  late final _mbgl_tile_server_options_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(mbgl_tile_server_options_t)>>('mbgl_tile_server_options_destroy');
  late final _mbgl_tile_server_options_destroy = _mbgl_tile_server_options_destroyPtr
      .asFunction<void Function(mbgl_tile_server_options_t)>();

  mbgl_resource_options_t mbgl_resource_options_create() {
    return _mbgl_resource_options_create();
  }

  late final _mbgl_resource_options_createPtr = _lookup<ffi.NativeFunction<mbgl_resource_options_t Function()>>(
    'mbgl_resource_options_create',
  );
  late final _mbgl_resource_options_create = _mbgl_resource_options_createPtr
      .asFunction<mbgl_resource_options_t Function()>();

  void mbgl_resource_options_destroy(
    mbgl_resource_options_t _resourceOptions,
  ) {
    return _mbgl_resource_options_destroy(
      _resourceOptions,
    );
  }

  late final _mbgl_resource_options_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(mbgl_resource_options_t)>>('mbgl_resource_options_destroy');
  late final _mbgl_resource_options_destroy = _mbgl_resource_options_destroyPtr
      .asFunction<void Function(mbgl_resource_options_t)>();

  void mbgl_resource_options_set_api_key(
    mbgl_resource_options_t _resourceOptions,
    ffi.Pointer<ffi.Char> apiKey,
  ) {
    return _mbgl_resource_options_set_api_key(
      _resourceOptions,
      apiKey,
    );
  }

  late final _mbgl_resource_options_set_api_keyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(mbgl_resource_options_t, ffi.Pointer<ffi.Char>)>>(
        'mbgl_resource_options_set_api_key',
      );
  late final _mbgl_resource_options_set_api_key = _mbgl_resource_options_set_api_keyPtr
      .asFunction<void Function(mbgl_resource_options_t, ffi.Pointer<ffi.Char>)>();

  void mbgl_resource_options_set_tile_server_options(
    mbgl_resource_options_t _resourceOptions,
    mbgl_tile_server_options_t _tileServerOptions,
  ) {
    return _mbgl_resource_options_set_tile_server_options(
      _resourceOptions,
      _tileServerOptions,
    );
  }

  late final _mbgl_resource_options_set_tile_server_optionsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(mbgl_resource_options_t, mbgl_tile_server_options_t)>>(
        'mbgl_resource_options_set_tile_server_options',
      );
  late final _mbgl_resource_options_set_tile_server_options = _mbgl_resource_options_set_tile_server_optionsPtr
      .asFunction<void Function(mbgl_resource_options_t, mbgl_tile_server_options_t)>();

  flmln_map_observer_t flmln_map_observer_create() {
    return _flmln_map_observer_create();
  }

  late final _flmln_map_observer_createPtr = _lookup<ffi.NativeFunction<flmln_map_observer_t Function()>>(
    'flmln_map_observer_create',
  );
  late final _flmln_map_observer_create = _flmln_map_observer_createPtr.asFunction<flmln_map_observer_t Function()>();

  void flmln_map_observer_destroy(
    flmln_map_observer_t _mapObserver,
  ) {
    return _flmln_map_observer_destroy(
      _mapObserver,
    );
  }

  late final _flmln_map_observer_destroyPtr = _lookup<ffi.NativeFunction<ffi.Void Function(flmln_map_observer_t)>>(
    'flmln_map_observer_destroy',
  );
  late final _flmln_map_observer_destroy = _flmln_map_observer_destroyPtr
      .asFunction<void Function(flmln_map_observer_t)>();

  flmln_renderer_frontend_t flmln_renderer_frontend_create() {
    return _flmln_renderer_frontend_create();
  }

  late final _flmln_renderer_frontend_createPtr = _lookup<ffi.NativeFunction<flmln_renderer_frontend_t Function()>>(
    'flmln_renderer_frontend_create',
  );
  late final _flmln_renderer_frontend_create = _flmln_renderer_frontend_createPtr
      .asFunction<flmln_renderer_frontend_t Function()>();

  void flmln_renderer_frontend_destroy(
    flmln_renderer_frontend_t _rendererFrontend,
  ) {
    return _flmln_renderer_frontend_destroy(
      _rendererFrontend,
    );
  }

  late final _flmln_renderer_frontend_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(flmln_renderer_frontend_t)>>('flmln_renderer_frontend_destroy');
  late final _flmln_renderer_frontend_destroy = _flmln_renderer_frontend_destroyPtr
      .asFunction<void Function(flmln_renderer_frontend_t)>();

  void flmln_renderer_frontend_render(
    flmln_renderer_frontend_t _rendererFrontend,
  ) {
    return _flmln_renderer_frontend_render(
      _rendererFrontend,
    );
  }

  late final _flmln_renderer_frontend_renderPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(flmln_renderer_frontend_t)>>('flmln_renderer_frontend_render');
  late final _flmln_renderer_frontend_render = _flmln_renderer_frontend_renderPtr
      .asFunction<void Function(flmln_renderer_frontend_t)>();

  void flmln_renderer_frontend_set_size_and_pixel_ratio(
    flmln_renderer_frontend_t _rendererFrontend,
    int width,
    int height,
    double pixelRatio,
  ) {
    return _flmln_renderer_frontend_set_size_and_pixel_ratio(
      _rendererFrontend,
      width,
      height,
      pixelRatio,
    );
  }

  late final _flmln_renderer_frontend_set_size_and_pixel_ratioPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(flmln_renderer_frontend_t, ffi.Uint32, ffi.Uint32, ffi.Float)>>(
        'flmln_renderer_frontend_set_size_and_pixel_ratio',
      );
  late final _flmln_renderer_frontend_set_size_and_pixel_ratio = _flmln_renderer_frontend_set_size_and_pixel_ratioPtr
      .asFunction<void Function(flmln_renderer_frontend_t, int, int, double)>();

  int flmln_renderer_frontend_get_texture_id(
    flmln_renderer_frontend_t _rendererFrontend,
  ) {
    return _flmln_renderer_frontend_get_texture_id(
      _rendererFrontend,
    );
  }

  late final _flmln_renderer_frontend_get_texture_idPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(flmln_renderer_frontend_t)>>(
        'flmln_renderer_frontend_get_texture_id',
      );
  late final _flmln_renderer_frontend_get_texture_id = _flmln_renderer_frontend_get_texture_idPtr
      .asFunction<int Function(flmln_renderer_frontend_t)>();
